Fix Card price alignment

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -78,6 +78,7 @@
     .card__price {
       font-size: 4em;
       line-height: 1em;
+      text-align: center;
     }
     .card__description {
       text-align: center;
